[package]
name = "bip85"
version = "0.1.1"
authors = ["Rita Kitic <rikitau@protonmail.com>"]
description = "BIP-85 - deterministic entropy from bip32 keychains"
repository = "https://github.com/rikitau/rust-bip85"
readme = "README.md"
license = "MIT"
edition = "2018"

[features]
default = ["mnemonic"]
mnemonic = ["bip39"]
# Note: English is the standard for bip39 so always included
chinese-simplified = ["mnemonic", "bip39/chinese-simplified"]
chinese-traditional = ["mnemonic", "bip39/chinese-traditional"]
czech = ["mnemonic", "bip39/czech"]
french = ["mnemonic", "bip39/french"]
italian = ["mnemonic", "bip39/italian"]
japanese = ["mnemonic", "bip39/japanese"]
korean = ["mnemonic", "bip39/korean"]
spanish = ["mnemonic", "bip39/spanish"]

all-languages = [
    "mnemonic",
    "chinese-simplified",
    "chinese-traditional",
    "czech",
    "french",
    "italian",
    "japanese",
    "korean",
    "spanish"
]

[dependencies]
bitcoin = "0.26.0"
bip39 = { version = "1.0.1", optional = true }

[[example]]
name = "mnemonic"
required-features = ["japanese"]

